[gd_scene load_steps=6 format=2]

[ext_resource path="res://tilemap.tres" type="TileSet" id=1]
[ext_resource path="res://exit_up.png" type="Texture" id=2]
[ext_resource path="res://scripts/Generator.gd" type="Script" id=3]
[ext_resource path="res://exit_down.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 8, 8 )

[node name="GeneratedLevel" type="Node2D"]
script = ExtResource( 3 )
min_dist = 4
spike_tile_index = 11
wall_tile_index = 8
start_tile_index = 13
finish_tile_index = 12

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position = Vector2( 322, 182 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Spikes" type="Area2D" parent="."]

[node name="spikes_map" type="TileMap" parent="Spikes"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_use_parent = true
bake_navigation = true
format = 1
tile_data = PoolIntArray( 3014572, 13, 0 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
bake_navigation = true
format = 1

[node name="Node" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Node"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CanvasLayer" type="CanvasLayer" parent="Node/Control"]

[node name="Count" type="Label" parent="Node/Control/CanvasLayer"]
margin_left = 1130.0
margin_top = 338.0
margin_right = 1216.0
margin_bottom = 372.0

[node name="Insructions" type="Label" parent="Node/Control/CanvasLayer"]
margin_left = 1057.0
margin_top = 633.0
margin_right = 1231.0
margin_bottom = 681.0
rect_scale = Vector2( 1.2, 1.2 )
text = "Click enter to respawn map
Yelloy is start
Green is finish"

[node name="Exit" type="TextureButton" parent="Node/Control/CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -66.0
margin_right = 164.0
rect_min_size = Vector2( 164, 66 )
rect_pivot_offset = Vector2( 82, 33 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Finish" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Finish"]
shape = SubResource( 19 )

[connection signal="body_entered" from="Spikes" to="." method="_on_Spikes_body_entered"]
[connection signal="pressed" from="Node/Control/CanvasLayer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="body_entered" from="Finish" to="." method="_on_Finish_body_entered"]
